Day 5 - Fix Some Overlap

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -45,7 +45,7 @@ body {
 .home {
   background-color: white;
   display: flex;
-  width: 1440px;
+  width: 1270px;
   border: none;
   border-radius: 8px;
   box-shadow: 0 15px 50px 0px rgba(0, 0, 0, 0.2);
@@ -58,7 +58,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 30px;
-  max-width: 800px;
+  flex: 2;
   padding: 20px;
   justify-content: center;
 }
@@ -78,12 +78,14 @@ body {
 }
 
 .home .card {
-  width: fit-content;
+  width: 250;
+  height: 420;
   /* border-width: 0.5px; */
   border-radius: 8px;
   box-shadow: 0 15px 50px 0px rgba(0, 0, 0, 0.2);
-  justify-content: center;
+  justify-content: space-between;
   transition: 0.3s;
+  flex: 1;
 }
 
 .card:hover {
@@ -91,8 +93,9 @@ body {
 }
 
 .profile {
+  object-fit: cover;
   width: 100%;
-  height: 300px;
+  height: 350px;
   border-radius: 10px 10px 0 0;
 }
 
@@ -103,9 +106,9 @@ h1 {
 .card-desc {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 10px;
   align-items: center;
-  padding: 10px 0 20px 0;
+  padding: 10px 5px 20px 5px;
 }
 
 .card-desc h1 {
